improve yaman and inference

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "d190c644-ae3e-4063-a342-853401bbfd25",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "vocab_size = 88        # number of possible notes\n",
+    "vocab_size = 88        # number of possible notes   \n",
     "seq_len = 24            # input length per example\n",
     "d_model = 128          # hidden size\n",
     "num_layers = 3           # transformer depth\n",
@@ -20,8 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "cae10263-d59b-4f72-a4d4-9cdef9b234db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6a91aa90-4a95-49c0-876e-f527a678d071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +37,8 @@
     "import jax.numpy as jnp\n",
     "from functools import partial\n",
     "import optax\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "6a91aa90-4a95-49c0-876e-f527a678d071",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
+    "\n",
     "from flax.struct import dataclass\n",
     "from jax.tree_util import register_pytree_node_class\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "afb2ad29-8765-4a6a-8128-c2a79c6dc36b",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "cf4a3451-a1e2-4917-a69a-697b5d9bce5e",
    "metadata": {},
    "outputs": [],
@@ -208,10 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "650ca6a8-40f0-4c5b-9f85-3fd5c13abc06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:2025-06-09 07:29:12,278:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -513,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bf49982a-ddd8-40f8-96c5-febe4ba402c0",
    "metadata": {},
    "outputs": [],
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8be37b7c-600d-4a41-807a-ed7ef39d5f61",
    "metadata": {},
    "outputs": [],
@@ -628,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0985b4be-550f-4b36-94ea-9c359aba0a12",
    "metadata": {},
    "outputs": [],
@@ -734,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "id": "f30e7d1e-d56d-4068-ba3f-053c07961ad7",
    "metadata": {},
    "outputs": [],
@@ -975,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "cd0912c6-6dfd-4b14-8690-18361a0122c7",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1024,7 @@
       "Input #0, wav, from 'mixed.wav':   0KB vq=    0KB sq=    0B f=0/0   \n",
       "  Duration: 00:00:14.40, bitrate: 1536 kb/s\n",
       "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, 2 channels, s16, 1536 kb/s\n",
-      "  14.28 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   "
+      "  14.25 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   \r"
      ]
     },
     {
@@ -1030,7 +1038,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  14.34 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   "
+      "  14.34 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   \r"
      ]
     },
     {
@@ -1039,7 +1047,7 @@
        "CompletedProcess(args=['ffplay', '-nodisp', '-autoexit', 'mixed.wav'], returncode=0)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "id": "a6f9e635-a75a-490d-ab9e-2048dba18286",
    "metadata": {},
    "outputs": [
@@ -1151,9 +1159,9 @@
       "  libswresample   4. 12.100 /  4. 12.100\n",
       "  libpostproc    57.  3.100 / 57.  3.100\n",
       "Input #0, wav, from 'mixed.wav':   0KB vq=    0KB sq=    0B f=0/0   \n",
-      "  Duration: 00:01:42.80, bitrate: 1536 kb/s\n",
+      "  Duration: 00:01:39.20, bitrate: 1536 kb/s\n",
       "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, 2 channels, s16, 1536 kb/s\n",
-      " 102.75 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   "
+      "  99.16 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   \r"
      ]
     },
     {
@@ -1169,7 +1177,7 @@
        "CompletedProcess(args=['ffplay', '-nodisp', '-autoexit', 'mixed.wav'], returncode=0)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,31 +1185,27 @@
    "source": [
     "from collections import namedtuple\n",
     "\n",
-    "def sample_autoregressively(params: ModelParams, start_tokens, max_len=32, temperature=1.0, top_k=None):\n",
-    "    \"\"\"\n",
-    "    start_tokens: (T,) array of initial token ids\n",
-    "    returns: (T + max_len,) array of generated token ids\n",
-    "    \"\"\"\n",
+    "def sample_autoregressively(params, start_tokens, max_len=32, temperature=1.0, top_k=None, seed=0):\n",
+    "    rng = jax.random.PRNGKey(seed)\n",
     "    generated = list(start_tokens)\n",
-    "    x = jnp.array(generated)[None, :]  # shape (1, T)\n",
+    "    x = jnp.array(generated)[None, :]\n",
     "\n",
     "    for i in range(max_len):\n",
-    "        x_emb = embedding_fn(params.embedding, x)  # (1, T, D)\n",
-    "        x_out = stacked_forward(x_emb, params.transformer)  # (1, T, D)\n",
-    "        logits = x_out[:, -1, :] @ params.W_out.T  # (1, vocab)\n",
+    "        x_emb = embedding_fn(params.embedding, x)\n",
+    "        x_out = stacked_forward(x_emb, params.transformer)\n",
+    "        logits = x_out[:, -1, :] @ params.W_out.T\n",
     "        logits = logits / temperature\n",
     "\n",
     "        if top_k is not None:\n",
     "            top_logits = jnp.sort(logits, axis=-1)[:, -top_k]\n",
     "            logits = jnp.where(logits < top_logits[:, None], -1e10, logits)\n",
     "\n",
-    "        probs = jax.nn.softmax(logits, axis=-1)\n",
-    "        next_token = jax.random.categorical(jax.random.PRNGKey(np.random.randint(1e6)), logits).item()\n",
+    "        rng, subkey = jax.random.split(rng)\n",
+    "        next_token = jax.random.categorical(subkey, logits).item()\n",
     "\n",
     "        generated.append(next_token)\n",
     "        x = jnp.array(generated)[None, :]\n",
     "\n",
-    "        # early stopping\n",
     "        if ((i+1)+len(start_tokens)) % 24 == 0 and next_token in [61, 73]:\n",
     "            break\n",
     "\n",
@@ -1256,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "id": "636fe6b4-234b-49c5-8729-2fd5f08c1feb",
    "metadata": {},
    "outputs": [],
@@ -1265,14 +1269,14 @@
     "import pickle\n",
     "\n",
     "# save\n",
-    "with open(\"model.pkl\", \"wb\") as f:\n",
-    "    bytes_output = flax.serialization.to_bytes(params)\n",
-    "    pickle.dump(bytes_output, f)\n",
+    "# with open(\"model.pkl\", \"wb\") as f:\n",
+    "#     bytes_output = flax.serialization.to_bytes(params)\n",
+    "#     pickle.dump(bytes_output, f)\n",
     "\n",
     "# load\n",
-    "# with open(\"model.pkl\", \"rb\") as f:\n",
-    "#     bytes_input = pickle.load(f)\n",
-    "#     params = flax.serialization.from_bytes(params, bytes_input)\n"
+    "with open(\"../checkpoints/model_20250609-090633.pkl\", \"rb\") as f:\n",
+    "    bytes_input = pickle.load(f)\n",
+    "    params = flax.serialization.from_bytes(params, bytes_input)\n"
    ]
   },
   {
@@ -1286,7 +1290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
